# miniature

./: CMakeLists.txt
cmake/modules/: FindGLFW.cmake  FindSFML.cmake
include/: common.h  component.h  engine.h  entity.h  renderer.h  shader.h  timer.h  window.h
src/: CMakeLists.txt  common.cpp  component.cpp  engine.cpp  entity.cpp  main.cpp  renderer.cpp  shader.cpp  timer.cpp  window.cpp
